@@ -1,3 +1,7 @@
+Wed Dec 11 13:17:21 2002  Brian Gough  <brian.gough@network-theory.co.uk>
+
+	* math.c (gsl_complex_arg): enforce special case arg(0,0) = 0.0
+
 Mon Sep 10 22:57:27 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* math.c (gsl_complex_div_real gsl_complex_div_real): added
